# Demo

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/content/pm/: IPackageInstallObserver2.aidl  IPackageManager.aidl  TextCallBack.aidl
app/src/main/aidl/android/os/: ILightControl.aidl  IMassageService.aidl
app/src/main/cpp/: VideoUtils.c  VideoUtils.h  watermark.c
app/src/main/java/com/cmccpoc/video/: CameraOpenHelper.java  MediaCodecCenter.java  MediaCodecSaveControl.java  MediaMuxerSave.java  Video.java  Video2.java  YuvWaterMark.java
app/src/main/java/com/vanzo/demo/: AudioActivity.java  BitrateActivity.java  CameraOpenHelper.java  DemoActivity.java  ImageSaveTask.java  MediaCodecCenter.java  MediaCodecSaveControl.java  MediaMuxerSave.java  UpgradeActivity.java  Video.java  VideoCap.java
app/src/main/java/com/vanzo/demo/jni/: VideoUtils.java  YuvWaterMark.java
app/src/main/java/com/vanzo/demo/video/: MediaCodecCenter.java  (+4 more)
app/src/main/java/com/yuv/: CameraOpenHelper.java  MediaCodecCenter.java  MediaCodecSaveControl.java  MediaMuxerSave.java  Video.java  Video2.java  YuvWaterMark.java
app/src/main/res/drawable/: ic_video_session_start.xml  ic_video_session_stop.xml
app/src/main/res/layout/: activity_audio.xml  activity_camera.xml  activity_demo.xml  activity_imei.xml  activity_mobile_law.xml  photo_camera.xml  photo_camera2.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
(+1 files in other folders)
